Fixed Header margin on Mobile

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -7,7 +7,7 @@
     }
     .ui.headerimg {
       min-height: 130px;
-      margin-top: 10px !important;
+      margin-top: 65px !important;
     }
     .ui.huge.header {
       font-size: 2.1rem
