--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,7 +183,6 @@ body {
   width: 100% !important;
   max-width: 100% !important;
   min-height: 230px;
-  margin: 0 auto;
   display:-ms-flexbox;
   -ms-flex-pack:center;
   -ms-flex-align:center;
